feat: add disposal functionality for products, including status updates and modal confirmation

--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -314,21 +314,21 @@
           id="section-stats"
           data-toggles="0::0::0::0::0::0"
           data-startingtexts="::::::::::"
-          data-highlighttexts="Unique::Low Stock::Out of Stock::Best Selling::Slow Moving"
-          data-endingtexts="Products::Products::Products::Products::Products"
+          data-highlighttexts="Unique::Low Stock::Out of Stock::Best Selling::Slow Moving::Disposed"
+          data-endingtexts="Products::Products::Products::Products::Products::Products"
         ></div>
         <div
           id="section-content"
           data-sectioncount="1"
-          data-tabtitles="Unique Products::Low Stock Products::Out of Stock Products::Best Selling Products::Least Selling Products"
-          data-subtitles="All stocks::About to be out of stock::Dead stocks::Fast moving stocks::Slow moving stocks"
+          data-tabtitles="Unique Products::Low Stock Products::Out of Stock Products::Best Selling Products::Least Selling Products::Disposed Products"
+          data-subtitles="All stocks::About to be out of stock::Dead stocks::Fast moving stocks::Slow moving stocks::Expired or damaged products"
           data-sectiononesearchtext="Search keyword..."
-          data-listemptytexts="No unique products yet::No low stock products yet::No out of stock products yet::No fast moving stocks yet::No slow moving stocks yet"
-          data-listtitletexts="[Product ID//Product Name//Price//Quantity//Status//Measurement//Measurement Unit//Category//Date Added]::[Product ID//Product Name//Price//Quantity//Status//Measurement//Measurement Unit//Category//Date Added]::[Product ID//Product Name//Price//Quantity//Status//Measurement//Measurement Unit//Category//Date Added]::[Product ID//Product Name//Price//Quantity//Status//Measurement//Measurement Unit//Category//Date Added]::[Product ID//Product Name//Price//Quantity//Status//Measurement//Measurement Unit//Category//Date Added]"
-          data-listdatasortby="[name//name//number//number//name//number//name//name//date]::[name//name//number//number//name//number//name//name//date]::[name//name//number//number//name//number//name//name//date]::[name//name//number//number//name//number//name//name//date]::[name//name//number//number//name//number//name//name//date]"
-          data-listitembtnids="[productDetailsBtn]::[productDetailsBtn]::[productDetailsBtn]::[productDetailsBtn]::[productDetailsBtn]"
-          data-listitembtntexts="[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]"
-          data-listitembtncolors="[yellow]::[yellow]::[yellow]::[yellow]::[yellow]"
+          data-listemptytexts="No unique products yet::No low stock products yet::No out of stock products yet::No fast moving stocks yet::No slow moving stocks yet::No disposed products yet"
+          data-listtitletexts="[Product ID//Product Name//Price//Quantity//Status//Measurement//Measurement Unit//Category//Date Added]::[Product ID//Product Name//Price//Quantity//Status//Measurement//Measurement Unit//Category//Date Added]::[Product ID//Product Name//Price//Quantity//Status//Measurement//Measurement Unit//Category//Date Added]::[Product ID//Product Name//Price//Quantity//Status//Measurement//Measurement Unit//Category//Date Added]::[Product ID//Product Name//Price//Quantity//Status//Measurement//Measurement Unit//Category//Date Added]::[Product ID//Product Name//Price//Quantity//Status//Measurement//Measurement Unit//Category//Date Added]"
+          data-listdatasortby="[name//name//number//number//name//number//name//name//date]::[name//name//number//number//name//number//name//name//date]::[name//name//number//number//name//number//name//name//date]::[name//name//number//number//name//number//name//name//date]::[name//name//number//number//name//number//name//name//date]::[name//name//number//number//name//number//name//name//date]"
+          data-listitembtnids="[productDetailsBtn]::[productDetailsBtn]::[productDetailsBtn]::[productDetailsBtn]::[productDetailsBtn]::[productDetailsBtn]"
+          data-listitembtntexts="[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]"
+          data-listitembtncolors="[yellow]::[yellow]::[yellow]::[yellow]::[yellow]::[gray]"
         ></div>
       </section>
 
