feat: reservation item in section 2

--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -261,6 +261,7 @@
           data-listitembtntexts="[]::[View Details [-⚙️-]//Void [-📕-]]::[View Details [-⚙️-]//Void [-📕-]]"
           data-listitembtncolors="[]::[orange//red]::[orange//red]"
           data-sectiontwotitletexts="Quick Reservation::Click a date in the live calendar tab"
+          data-sectiontwoemptylist="No selected date yet"
           data-sectiontwobtntext="Process Reservation Date"
         ></div>
       </section>
