fix: can now disposed products

--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -313,10 +313,10 @@
         ></div>
         <div
           id="section-stats"
-          data-toggles="0::0::0::0::0::0"
-          data-startingtexts="::::::::::"
-          data-highlighttexts="Unique::Low Stock::Out of Stock::Best Selling::Slow Moving::Disposed"
-          data-endingtexts="Products::Products::Products::Products::Products::Products"
+          data-toggles="0::0::0::0::0"
+          data-startingtexts=":::::::::"
+          data-highlighttexts="Unique::Low Stock::Out of Stock::Best Selling::Slow Moving"
+          data-endingtexts="Products::Products::Products::Products::Products"
         ></div>
         <div
           id="section-content"
