feat: make the cart (products that buy) record to the payment transaction to a payment module

--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -291,7 +291,7 @@
           data-sectiontwotitletexts="Cart::List of items added to cart"
           data-sectiontwosettings="1"
           data-sectiontwoemptylist="No items yet"
-          data-sectiontwobtntext="Checkout"
+          data-sectiontwobtntext="Checkout 🛒"
         ></div>
       </section>
 
