--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -354,15 +354,15 @@
         <div
           id="section-content"
           data-sectioncount="1"
-          data-tabtitles="Pending Transactions Log::Canceled Transactions Log::Complete Transactions Log::Refund Transactions Log"
-          data-subtitles="Total pending transactions::Total void transactions::Total complete transactions::Total refund transactions"
+          data-tabtitles="Pending Transactions Log::Canceled Transactions Log::Service Transactions Log::Sales Transactions Log::Refund Transactions Log"
+          data-subtitles="Total pending transactions::Total void transactions::Total service transactions::Total sales transactions::Total refund transactions"
           data-sectiononesearchtext="Search keyword..."
-          data-listemptytexts="No pending transactions yet::No canceled transactions yet::No complete transactions yet::No refund transactions yet"
-          data-listtitletexts="[Transaction ID//Customer//Purpose//Amount to Pay//Price Rate//Log Date & Time]::[Transaction ID//Customer//Purpose//Log Date & Time]::[Transaction ID//Customer ID//Log Date & Time]::[Transaction ID//Customer//Purpose//Refund Amount//Log Date & Time]"
-          data-listdatasortby="[name//name//name//number//name//date]::[name//name//name//date]::[name//name//date]::[name//name//name//number//date]"
-          data-listitembtnids="[transactionProcessBtn//transactionCancelBtn]::[transactionDetailsBtn]::[transactionDetailsBtn]::[transactionDetailsBtn]"
-          data-listitembtntexts="[Process [-📒-]//Cancel [-📕-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]"
-          data-listitembtncolors="[yellow//red]::[gray]::[gray]::[gray]"
+          data-listemptytexts="No pending transactions yet::No canceled transactions yet::No service transactions yet::No sales transactions yet::No refund transactions yet"
+          data-listtitletexts="[Transaction ID//Customer//Purpose//Amount to Pay//Price Rate//Log Date & Time]::[Transaction ID//Customer//Purpose//Log Date & Time]::[Transaction ID//Customer ID//Log Date & Time]::[Transaction ID//Purpose//Log Date & Time]::[Transaction ID//Customer//Purpose//Refund Amount//Log Date & Time]"
+          data-listdatasortby="[name//name//name//number//name//date]::[name//name//name//date]::[name//name//date]::[name//name//date]::[name//name//name//number//date]"
+          data-listitembtnids="[transactionProcessBtn//transactionCancelBtn]::[transactionDetailsBtn]::[transactionDetailsBtn]::[transactionDetailsBtn]::[transactionDetailsBtn]"
+          data-listitembtntexts="[Process [-📒-]//Cancel [-📕-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]"
+          data-listitembtncolors="[yellow//red]::[gray]::[gray]::[gray]::[gray]"
         ></div>
       </section>
 
