fix: update product filtering to exclude disposed items in stock statistics

--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -314,7 +314,7 @@
         <div
           id="section-stats"
           data-toggles="0::0::0::0::0"
-          data-startingtexts=":::::::::"
+          data-startingtexts="::::::::::"
           data-highlighttexts="Unique::Low Stock::Out of Stock::Best Selling::Slow Moving"
           data-endingtexts="Products::Products::Products::Products::Products"
         ></div>
