feat: enhance transaction display by adding Customer Name to payment details and updating data attributes

--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -365,8 +365,8 @@
           data-subtitles="Total pending transactions::Total void transactions::Total service transactions::Total sales transactions::Total refund transactions"
           data-sectiononesearchtext="Search keyword..."
           data-listemptytexts="No pending transactions yet::No canceled transactions yet::No service transactions yet::No sales transactions yet::No refund transactions yet"
-          data-listtitletexts="[Transaction ID//Customer//Purpose//Amount to Pay//Price Rate//Log Date & Time]::[Transaction ID//Customer//Purpose//Log Date & Time]::[Transaction ID//Customer ID//Log Date & Time]::[Transaction ID//Purpose//Log Date & Time]::[Transaction ID//Customer//Purpose//Refund Amount//Log Date & Time]"
-          data-listdatasortby="[name//name//name//number//name//date]::[name//name//name//date]::[name//name//date]::[name//name//date]::[name//name//name//number//date]"
+          data-listtitletexts="[Transaction ID//Customer//Purpose//Amount to Pay//Price Rate//Log Date & Time]::[Transaction ID//Customer//Purpose//Log Date & Time]::[Transaction ID//Customer ID//Customer Name//Log Date & Time]::[Transaction ID//Purpose//Log Date & Time]::[Transaction ID//Customer//Purpose//Refund Amount//Log Date & Time]"
+          data-listdatasortby="[name//name//name//number//name//date]::[name//name//name//date]::[name//name//name//date]::[name//name//date]::[name//name//name//number//date]"
           data-listitembtnids="[transactionProcessBtn//transactionCancelBtn]::[transactionDetailsBtn]::[transactionDetailsBtn]::[transactionDetailsBtn]::[transactionDetailsBtn]"
           data-listitembtntexts="[Process [-📒-]//Cancel [-📕-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]"
           data-listitembtncolors="[yellow//red]::[gray]::[gray]::[gray]::[gray]"
