--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -322,7 +322,7 @@
           id="section-stats"
           data-toggles="0::0::0::0::0::0"
           data-startingtexts="::::::::::::"
-          data-highlighttexts="Unique::Low Stock::Super Low Stock::Out of Stock::Best Selling::Slow Moving"
+          data-highlighttexts="Unique::Low Stock::Out of Stock::Best Selling::Least Selling::Super Low Stock"
           data-endingtexts="Products::Products::Products::Products::Products::Products"
         ></div>
         <div
