feat: update supplements tab data structure to include measurement details and adjust HTML attributes for consistency

--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -422,12 +422,13 @@
         <div
           id="section-content"
           data-sectioncount="1"
-          data-tabtitles="Monthly Users::Regular / Daily Users::Students::Supplements::Reservations"
-          data-subtitles="Monthly Users::Regular / Daily Users::Students::Supplements::Reservations"
+          data-tabtitles="Monthly Users::Regular / Daily Users::Students::Supplements / Products::Reservations"
+          data-subtitles="Monthly Users::Regular / Daily Users::Students::Supplements / Products::Reservations"
           data-sectiononesearchtext="Search keyword..."
           data-sectiononesettings="1"
           data-listemptytexts="No monthly members found::No regular users found::No student users found::No supplement sales found::No reservations found"
-          data-listtitletexts="[Member ID//Member Name//Type//Status//Start Date//End Date//Amount//Renewal Amount]::[ID//Type//Client Name//Time In//Amount]::[ID//Type//Client Name//Time In//Amount]::[Product ID//Product Name//Quantity//Price//Quantity Sold//Total Sales//Date]::[Reservation ID//Service Type//Customer Name//Start Time//End Time//Reservation Date//Additional Members//Price]"
+          data-listtitletexts="[Member ID//Member Name//Type//Status//Start Date//End Date//Amount//Renewal Amount]::[ID//Type//Client Name//Time In//Amount]::[ID//Type//Client Name//Time In//Amount]::[Product ID//Product Name//Quantity//Price//Measurement//Measurement Unit//Quantity Sold//Total Sales//Date]::[Reservation ID//Service Type//Customer Name//Start Time//End Time//Reservation Date//Additional Members//Price]"
+          data-listdatasortby="[name//name//name//date//date//number//number//date]::[name//name//name//date]::[name//name//name//date]::[name//name//number//number//number//name//number//number//date]::[name//name//name//date//date//number//number]"
           data-listitembtnids="[userDetailsBtn]::[userDetailsBtn]::[userDetailsBtn]::[userDetailsBtn]::[userDetailsBtn]"
           data-listitembtntexts="[Details [-📙-]]::[Details [-📙-]]::[Details [-📙-]]::[Details [-📙-]]::[Details [-📙-]]"
           data-listitembtncolors="[orange]::[orange]::[orange]::[orange]::[orange]"
