feat: enhance monthly customer inquiry management by refining query to fetch only active subscriptions and adding duplicate entry handling

--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -181,10 +181,10 @@
         ></div>
         <div
           id="section-stats"
-          data-toggles="0::0::0::0"
-          data-startingtexts="Total::Total::Active::Active"
-          data-highlighttexts="Regular::Student::Monthly::Reservations"
-          data-endingtexts="Customers::Customers::Customers::"
+          data-toggles="0::0::0::0::0"
+          data-startingtexts="Total::Total::Active::Active::Total"
+          data-highlighttexts="Regular::Student::Monthly::Reservations::Archived"
+          data-endingtexts="Customers::Customers::Customers::::Customers"
         ></div>
         <div
           id="section-content"
