feat: update dashboard stats calculations and improve inquiry customer unarchive message

--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -139,11 +139,11 @@
         ></div>
         <div
           id="section-stats"
-          data-toggles="1::1::1::0::0"
-          data-startingtexts="Avg::Avg::Avg::Active::Active"
-          data-highlighttexts="Daily::Weekly::Monthly::Monthly Customers::Reservations"
-          data-endingtexts="Earnings::Earnings::Earnings::::"
-          data-types="average daily earning::average weekly earning::average monthly earning::active monthly customers::active reservations"
+          data-toggles="1::1::1::1::0::0"
+          data-startingtexts="::::::Active::Active"
+          data-highlighttexts="Overall Total::Gym::Reservation::Product::Monthly Customers::Reservations"
+          data-endingtexts="Sales::Revenue::Revenue::Sales::::"
+          data-types="overall total sales::gym revenue::reservation revenue::product sales::active monthly customers::active reservations"
         ></div>
         <div
           id="section-content"
