--- a/src/html/customer_dashboard.html
+++ b/src/html/customer_dashboard.html
@@ -792,8 +792,8 @@
 
     <!-- main js -->
     <script src="/src/js/customer_dashboard.js"></script>
-    <script src="/src/js/customer_modules/customer_calendar.js"></script>
-    <script src="/src/js/customer_modules/customer_monthly_pass.js"></script>
+    <script type="module" src="/src/js/customer_modules/customer_calendar.js"></script>
+    <script type="module" src="/src/js/customer_modules/customer_monthly_pass.js"></script>
     <!-- add new js here 👆 -->
   </body>
 </html>
