fix: undefine in the Active Reservation

--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -140,8 +140,8 @@
         <div
           id="section-stats"
           data-toggles="1::1::1::1::0::0"
-          data-startingtexts="::::::Active::Active"
-          data-highlighttexts="Overall Total::Gym::Reservation::Product::Monthly Customers::Reservations"
+          data-startingtexts="::::::::Active Monthly::Active"
+          data-highlighttexts="Overall Total::Gym::Reservation::Product::Customers::Reservations"
           data-endingtexts="Sales::Revenue::Revenue::Sales::::"
           data-types="overall total sales::gym revenue::reservation revenue::product sales::active monthly customers::active reservations"
         ></div>
