--- a/src/html/customer_dashboard.html
+++ b/src/html/customer_dashboard.html
@@ -33,6 +33,9 @@
         font-style: italic;
       }
     </style> -->
+
+    <!-- toastify (for quick notifications) -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css" />
   </head>
   <body
     class="relative flex min-h-screen cursor-default flex-col bg-gradient-to-br from-orange-50 to-orange-100"
@@ -203,7 +206,7 @@
                 <div class="flex items-center space-x-3">
                   <span class="font-bold text-orange-300">⏰</span>
                   <!-- 🔑 CLIENT -->
-                  <span class="text-sm font-medium">9:00 AM - 11:59 PM</span>
+                  <span class="text-sm font-medium">7:00 AM - 11:59 PM</span>
                 </div>
                 <span class="text-xs text-orange-200">Operating Hours</span>
               </div>
@@ -427,7 +430,7 @@
         <!-- Quick Info Sidebar -->
         <div class="w-full lg:w-96 border-t lg:border-t-0 lg:border-l border-orange-200 bg-white/70">
           <div class="px-4 py-6 h-full">
-            <h3 class="mb-3 text-base font-semibold text-orange-900">Book a Session</h3>
+            <h3 class="mb-3 text-lg font-bold text-orange-900 justify-center flex">Reserve Facility</h3>
             <div id="customerReservationQuick" class="h-full overflow-y-auto pr-1">
               <form id="bookingForm" class="space-y-4 text-sm">
                 <!-- Choose Service -->
@@ -446,14 +449,14 @@
                 </div>
   
                 <!-- Main Client Name -->
-                <div>
+                <!-- <div>
                   <label for="clientName" class="block text-xs font-semibold text-gray-700 mb-1">Main Client Name</label>
                   <input id="clientName" name="clientName" type="text" class="w-full rounded-md border border-gray-300 px-3 py-2 text-sm text-gray-800 focus:outline-none focus:ring-2 focus:ring-orange-400" placeholder="Enter your full name" required />
-                </div>
+                </div> -->
   
                 <!-- Quick Booking Tip -->
                 <div class="rounded-md border border-orange-200 bg-orange-50 p-3 text-xs text-orange-900">
-                  <p class="font-semibold mb-1">Quick Booking Tip!</p>
+                  <p class="font-semibold mb-1">Quick Reservation Tip!</p>
                   <p class="mb-2">We leave a small gap between appointments to prepare for each customer. Here's how it works:</p>
                   <ul class="list-disc pl-4 space-y-1 text-xs">
                     <li>If someone books until 2:00 PM</li>
@@ -487,11 +490,11 @@
                 </div>
   
                 <!-- Team Members -->
-                <div>
+                <!-- <div>
                   <label for="teamMembers" class="block text-xs font-semibold text-gray-700 mb-1">Team Members</label>
                   <input id="teamMembers" name="teamMembers" type="number" min="0" max="8" value="0" class="w-full rounded-md border border-gray-300 px-3 py-2 text-sm text-gray-800 focus:outline-none focus:ring-2 focus:ring-orange-400" />
                   <p class="mt-1 text-xs text-gray-500">Max 8 additional players</p>
-                </div>
+                </div> -->
   
                 <!-- Submit -->
                 <div>
@@ -795,5 +798,8 @@
     <script type="module" src="/src/js/customer_modules/customer_calendar.js"></script>
     <script type="module" src="/src/js/customer_modules/customer_monthly_pass.js"></script>
     <!-- add new js here 👆 -->
+
+    <!-- imported js -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
   </body>
 </html>
