feat: customer reservation

--- a/src/html/customer_dashboard.html
+++ b/src/html/customer_dashboard.html
@@ -457,7 +457,7 @@
                 <!-- Quick Booking Tip -->
                 <div class="rounded-md border border-orange-200 bg-orange-50 p-3 text-xs text-orange-900">
                   <p class="font-semibold mb-1">Quick Reservation Tip!</p>
-                  <p class="mb-2">We leave a small gap between appointments to prepare for each customer. Here's how it works:</p>
+                  <p class="mb-2">We leave a small gap between reservations to prepare for each customer. Here's how it works:</p>
                   <ul class="list-disc pl-4 space-y-1 text-xs">
                     <li>If someone books until 2:00 PM</li>
                     <li>Your appointment can start at 2:01 PM</li>
