fix: content height for different devices

--- a/src/html/admin_content.html
+++ b/src/html/admin_content.html
@@ -47,7 +47,7 @@
           </button>
         </div>
       </div>
-      <div class="scrollbar-light max-h-[550px] min-h-[550px] p-2"></div>
+      <div class="scrollbar-light p-2"></div>
     </div>
   </div>
   <div class="col-span-1 flex hidden flex-col 2xl:col-span-4">
