--- a/src/html/customer_dashboard.html
+++ b/src/html/customer_dashboard.html
@@ -793,6 +793,9 @@
       </div>
     </div>
 
+    <!-- portal for customer modals -->
+    <div id="customerModalRoot"></div>
+
     <!-- main js -->
     <script type="module" src="/src/js/customer_dashboard.js"></script>
     <script type="module" src="/src/js/customer_modules/customer_calendar.js"></script>
