feat: enhance payment transaction handling with hybrid payment support and improved stats display

--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -352,24 +352,24 @@
         ></div>
         <div
           id="section-stats"
-          data-toggles="1::1::1::1::1"
-          data-startingtexts="::::Avg::Avg::Avg"
-          data-highlighttexts="Today's::Today's::Daily::Weekly::Monthly"
-          data-endingtexts="Cash Sales::Cashless Sales::Sales::Sales::Sales"
-          data-types="cash sales today::cashless sales today::average daily sales::average weekly sales::average monthly sales"
+          data-toggles="1::1::1::1::1::1"
+          data-startingtexts="::::Avg::Avg::Avg::Avg"
+          data-highlighttexts="Today's::Today's::Overall::Daily::Weekly::Monthly"
+          data-endingtexts="Cash Sales::Cashless Sales::Total::Sales::Sales::Sales"
+          data-types="cash sales today::cashless sales today::overall total sales::average daily sales::average weekly sales::average monthly sales"
         ></div>
         <div
           id="section-content"
           data-sectioncount="1"
-          data-tabtitles="Pending Transactions Log::Canceled Transactions Log::Service Transactions Log::Sales Transactions Log"
-          data-subtitles="Total pending transactions::Total void transactions::Total service transactions::Total sales transactions"
+          data-tabtitles="Pending Transactions Log::Canceled Transactions Log::Service Transactions::Service (Cash)::Service (Cashless)::Sales Transactions::Sales (Cash)::Sales (Cashless)"    
+          data-subtitles="Total pending transactions::Total void transactions::All service transactions::cash::cashless::All sales transactions::Cash::Cashless"
           data-sectiononesearchtext="Search keyword..."
-          data-listemptytexts="No pending transactions yet::No canceled transactions yet::No service transactions yet::No sales transactions yet"
-          data-listtitletexts="[Transaction ID//Customer//Purpose//Amount to Pay//Price Rate//Log Date & Time]::[Transaction ID//Customer//Purpose//Log Date & Time]::[Transaction ID//Customer ID//Customer Name//Log Date & Time]::[Transaction ID//Purpose//Log Date & Time]"
-          data-listdatasortby="[name//name//name//number//name//date]::[name//name//name//date]::[name//name//name//date]::[name//name//date]"
-          data-listitembtnids="[transactionProcessBtn//transactionCancelBtn]::[transactionDetailsBtn]::[transactionDetailsBtn]::[transactionDetailsBtn]"
-          data-listitembtntexts="[Process [-📒-]//Cancel [-📕-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]"
-          data-listitembtncolors="[yellow//red]::[gray]::[gray]::[gray]"
+          data-listemptytexts="No pending transactions yet::No canceled transactions yet::No service transactions yet::No cash service transactions yet::No cashless service transactions yet::No sales transactions yet::No cash sales transactions yet::No cashless sales transactions yet"
+          data-listtitletexts="[Transaction ID//Customer//Purpose//Amount to Pay//Price Rate//Log Date & Time]::[Transaction ID//Customer//Purpose//Log Date & Time]::[Transaction ID//Customer ID//Customer Name//Log Date & Time]::[Transaction ID//Customer ID//Customer Name//Log Date & Time]::[Transaction ID//Customer ID//Customer Name//Log Date & Time]::[Transaction ID//Purpose//Log Date & Time]::[Transaction ID//Purpose//Log Date & Time]::[Transaction ID//Purpose//Log Date & Time]"
+          data-listdatasortby="[name//name//name//number//name//date]::[name//name//name//date]::[name//name//name//date]::[name//name//name//date]::[name//name//name//date]::[name//name//date]::[name//name//date]::[name//name//date]"
+          data-listitembtnids="[transactionProcessBtn//transactionCancelBtn]::[transactionDetailsBtn]::[transactionDetailsBtn]::[transactionDetailsBtn]::[transactionDetailsBtn]::[transactionDetailsBtn]::[transactionDetailsBtn]::[transactionDetailsBtn]"
+          data-listitembtntexts="[Process [-📒-]//Cancel [-📕-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]::[Details [-⚙️-]]"
+          data-listitembtncolors="[yellow//red]::[gray]::[gray]::[gray]::[gray]::[gray]::[gray]::[gray]"
         ></div>
       </section>
 
