refactor: update customer status handling and improve date checks for monthly memberships

--- a/src/html/_admin_main.html
+++ b/src/html/_admin_main.html
@@ -361,8 +361,8 @@
         <div
           id="section-content"
           data-sectioncount="1"
-          data-tabtitles="Pending Transactions Log::Canceled Transactions Log::Service Transactions::Service (Cash)::Service (Cashless)::Sales Transactions::Sales (Cash)::Sales (Cashless)"    
-          data-subtitles="Total pending transactions::Total void transactions::All service transactions::cash::cashless::All sales transactions::Cash::Cashless"
+          data-tabtitles="Pending Transactions Log::Canceled Transactions Log::Service Transactions::Service::Service::Sales Transactions::Sales::Sales"    
+          data-subtitles="Total pending transactions::Total void transactions::All service transactions::Cash::Cashless::All sales transactions::Cash::Cashless"
           data-sectiononesearchtext="Search keyword..."
           data-listemptytexts="No pending transactions yet::No canceled transactions yet::No service transactions yet::No cash service transactions yet::No cashless service transactions yet::No sales transactions yet::No cash sales transactions yet::No cashless sales transactions yet"
           data-listtitletexts="[Transaction ID//Customer//Purpose//Amount to Pay//Price Rate//Log Date & Time]::[Transaction ID//Customer//Purpose//Log Date & Time]::[Transaction ID//Customer ID//Customer Name//Log Date & Time]::[Transaction ID//Customer ID//Customer Name//Log Date & Time]::[Transaction ID//Customer ID//Customer Name//Log Date & Time]::[Transaction ID//Purpose//Log Date & Time]::[Transaction ID//Purpose//Log Date & Time]::[Transaction ID//Purpose//Log Date & Time]"
